Fixed github icon not showing in footer due to colour. Added publications record.

--- a/_sass/minimal-mistakes/skins/_deep_sea.scss
+++ b/_sass/minimal-mistakes/skins/_deep_sea.scss
@@ -46,7 +46,7 @@ $base0f: #b18a3d !default;
   color: #fff !important; // override
 }
 
-.page__footer-follow .social-icons .svg-inline--fa {
-  color: inherit !important;
+.page__footer-follow .social-icons .fab {
+    color: #1b97d1;
 }
 
